--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <div class="description">
       <div class="area-image2">
-        <img src="/images/icon-music.svg">
+        <img src="images/icon-music.svg">
       </div>  
       <div class="plan">
         <h3>Annual Plan</h3>
