--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <main class="container">
     <div class="area-image">
-      <img src="images/illustration-hero.svg">
+      <img src="images/illustration-hero.svg" alt="illustration hero">
     </div>
     <div class="title">
       <h1>Order Summary</h1>
@@ -29,7 +29,7 @@
     </div>
     <div class="description">
       <div class="area-image2">
-        <img src="images/icon-music.svg">
+        <img src="images/icon-music.svg" alt="icon music">
       </div>  
       <div class="plan">
         <h3>Annual Plan</h3>
